components/header/header.css
.header__wrapper {
    background-color: #0077a6;
}

.header {
    display: flex;
    text-decoration: none;
    color: inherit;
}

.header__logo {
    height: 20rem;
}

.header__slogan {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 3rem;
    font-weight: 100;
    color: white;
    padding: 1.5rem 0 0 1rem;
}

.header__image {
    display: block;
    margin: auto;
    width: 80rem;
    height: 32rem;
    padding-top: 5rem;
}

.secondary-header {
    display: block;
    text-align: center;
    margin-top: 3rem;
}

.secondary-header__item {
    position: relative;
    display: inline-block;
    margin-right: .25rem;
    font-size: 1.4rem;
}

.secondary-header__link {
    padding: .5rem;
    letter-spacing: 1px;
    text-decoration: none;
    color: #666;
    font-weight: 900;
}

.site__title {
    text-align: center;
    color: #0077a6;
    font-size: 5rem;
    margin-top: 5rem;
}

.site__summary-wrapper {
    border-top: 10px solid darkblue;
    padding: 3em 1.33333em;
    background-color: #0077a6;
    color: #fff;
}

.site__summary {
    display: block;
    clear: both;
    max-width: 1024px;
    margin: 0 auto;
}

.site__summary-content {
    font-weight: 400;
    font-size: 3rem;
    line-height: 4rem;
    color: #fff;
    letter-spacing: 2px;
    margin-top: 0;
}

.header__logo-text {

}

